==> FreeRTOS/Lab-Project-FreeRTOS-FAT/portable/STM32F4xx/ff_sddisk.c <==
#include <stdlib.h>
#include <string.h>
#include <stdarg.h>
#include <stdio.h>
#include "FreeRTOS.h"
#include "task.h"
#include "semphr.h"
#include "portmacro.h"
#include "ff_sddisk.h"
#include "ff_sys.h"
#include "stm32f4xx_hal.h"
#define sdSIGNATURE                          0x41404342UL
#define sdHUNDRED_64_BIT                     ( 100ull )
#define sdBYTES_PER_MB                       ( 1024ull * 1024ull )
#define sdSECTORS_PER_MB                     ( sdBYTES_PER_MB / 512ull )
#define sdIOMAN_MEM_SIZE                     4096
#define SD_DMAx_Tx_CHANNEL                   DMA_CHANNEL_4
#define SD_DMAx_Rx_CHANNEL                   DMA_CHANNEL_4
#define SD_DMAx_Tx_STREAM                    DMA2_Stream6
#define SD_DMAx_Rx_STREAM                    DMA2_Stream3
#define SD_DMAx_Tx_IRQn                      DMA2_Stream6_IRQn
#define SD_DMAx_Rx_IRQn                      DMA2_Stream3_IRQn
#define __DMAx_TxRx_CLK_ENABLE               __DMA2_CLK_ENABLE
#define configSDIO_DMA_INTERRUPT_PRIORITY    ( configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY )
    #define sdMAX_TIME_TICKS    pdMS_TO_TICKS( 2000UL )
    #define sdCARD_DETECT_DEBOUNCE_TIME_MS    ( 5000 )
    #define sdARRAY_SIZE( x )    ( int ) ( sizeof( x ) / sizeof( x )[ 0 ] )

static int32_t prvFFRead( uint8_t * pucBuffer,
                          uint32_t ulSectorNumber,
                          uint32_t ulSectorCount,
                          FF_Disk_t * pxDisk )
{
    int32_t lReturnCode = FF_ERR_IOMAN_OUT_OF_BOUNDS_READ | FF_ERRFLAG;

    if( ( pxDisk != NULL ) &&
        ( xSDCardStatus == pdPASS ) &&
        ( pxDisk->ulSignature == sdSIGNATURE ) &&
        ( pxDisk->xStatus.bIsInitialised != pdFALSE ) &&
        ( ulSectorNumber < pxDisk->ulNumberOfSectors ) &&
        ( ( pxDisk->ulNumberOfSectors - ulSectorNumber ) >= ulSectorCount ) )
    {
        uint64_t ullReadAddr;
        HAL_SD_ErrorTypedef sd_result;

        ullReadAddr = 512ull * ( uint64_t ) ulSectorNumber;

        #if ( SDIO_USES_DMA == 0 )
            {
                sd_result = HAL_SD_ReadBlocks( &xSDHandle, ( uint32_t * ) pucBuffer, ullReadAddr, 512ul, ulSectorCount );
            }
        #else
            {
                if( ( ( ( size_t ) pucBuffer ) & ( sizeof( size_t ) - 1 ) ) == 0 )
                {
                    /* The buffer is word-aligned, call DMA read directly. */
                    sd_result = HAL_SD_ReadBlocks_DMA( &xSDHandle, ( uint32_t * ) pucBuffer, ullReadAddr, 512ul, ulSectorCount );

                    if( sd_result == SD_OK )
                    {
                        sd_result = HAL_SD_CheckReadOperation( &xSDHandle, sdMAX_TIME_TICKS );
                    }
                }
                else
                {
                    uint32_t ulSector;
                    uint8_t * pucDMABuffer = ffconfigMALLOC( 512ul );

                    /* The buffer is NOT word-aligned, copy first to an aligned buffer. */
                    if( pucDMABuffer != NULL )
                    {
                        sd_result = SD_OK;

                        for( ulSector = 0; ulSector < ulSectorCount; ulSector++ )
                        {
                            ullReadAddr = 512ull * ( ( uint64_t ) ulSectorNumber + ( uint64_t ) ulSector );
                            sd_result = HAL_SD_ReadBlocks_DMA( &xSDHandle, ( uint32_t * ) pucDMABuffer, ullReadAddr, 512ul, 1 );

                            if( sd_result == SD_OK )
                            {
                                sd_result = HAL_SD_CheckReadOperation( &xSDHandle, sdMAX_TIME_TICKS );

                                if( sd_result != SD_OK )
                                {
                                    break;
                                }

                                memcpy( pucBuffer + 512ul * ulSector, pucDMABuffer, 512ul );
                            }
                        }

                        ffconfigFREE( pucDMABuffer );
                    }
                    else
                    {
                        sd_result = SD_INVALID_PARAMETER;
                    }
                }
            }
        #endif /* SDIO_USES_DMA */

        if( sd_result == SD_OK )
        {
            lReturnCode = 0L;
        }
        else
        {
            /* Some error occurred. */
            FF_PRINTF( "prvFFRead: %lu: %u (%s)\n", ulSectorNumber, sd_result, prvSDCodePrintable( sd_result ) );
        }
    }
    else
    {
        /* Make sure no random data is in the returned buffer. */
        memset( ( void * ) pucBuffer, '\0', ulSectorCount * 512UL );

        if( pxDisk->xStatus.bIsInitialised != pdFALSE )
        {
            FF_PRINTF( "prvFFRead: warning: %lu + %lu > %lu\n", ulSectorNumber, ulSectorCount, pxDisk->ulNumberOfSectors );
        }
    }

    return lReturnCode;
}

static int32_t prvFFWrite( uint8_t * pucBuffer,
                           uint32_t ulSectorNumber,
                           uint32_t ulSectorCount,
                           FF_Disk_t * pxDisk )
{
    int32_t lReturnCode = FF_ERR_IOMAN_OUT_OF_BOUNDS_READ | FF_ERRFLAG;

    if( ( pxDisk != NULL ) &&
        ( xSDCardStatus == pdPASS ) &&
        ( pxDisk->ulSignature == sdSIGNATURE ) &&
        ( pxDisk->xStatus.bIsInitialised != pdFALSE ) &&
        ( ulSectorNumber < pxDisk->ulNumberOfSectors ) &&
        ( ( pxDisk->ulNumberOfSectors - ulSectorNumber ) >= ulSectorCount ) )
    {
        HAL_SD_ErrorTypedef sd_result;
        uint64_t ullWriteAddr;
        ullWriteAddr = 512ull * ulSectorNumber;

        #if ( SDIO_USES_DMA == 0 )
            {
                sd_result = HAL_SD_WriteBlocks( &xSDHandle, ( uint32_t * ) pucBuffer, ullWriteAddr, 512ul, ulSectorCount );
            }
        #else
            {
                if( ( ( ( size_t ) pucBuffer ) & ( sizeof( size_t ) - 1 ) ) == 0 )
                {
                    /* The buffer is word-aligned, call DMA reawrite directly. */
                    sd_result = HAL_SD_WriteBlocks_DMA( &xSDHandle, ( uint32_t * ) pucBuffer, ullWriteAddr, 512ul, ulSectorCount );

                    if( sd_result == SD_OK )
                    {
                        sd_result = HAL_SD_CheckWriteOperation( &xSDHandle, sdMAX_TIME_TICKS );
                    }
                }
                else
                {
                    uint32_t ulSector;
                    uint8_t * pucDMABuffer = ffconfigMALLOC( 512ul );

                    /* The buffer is NOT word-aligned, read to an aligned buffer and then
                     * copy the data to the user provided buffer. */
                    if( pucDMABuffer != NULL )
                    {
                        sd_result = SD_OK;

                        for( ulSector = 0; ulSector < ulSectorCount; ulSector++ )
                        {
                            memcpy( pucDMABuffer, pucBuffer + 512ul * ulSector, 512ul );
                            ullWriteAddr = 512ull * ( ulSectorNumber + ulSector );
                            sd_result = HAL_SD_WriteBlocks_DMA( &xSDHandle, ( uint32_t * ) pucDMABuffer, ullWriteAddr, 512ul, 1 );

                            if( sd_result == SD_OK )
                            {
                                sd_result = HAL_SD_CheckWriteOperation( &xSDHandle, sdMAX_TIME_TICKS );

                                if( sd_result != SD_OK )
                                {
                                    break;
                                }
                            }
                        }

                        ffconfigFREE( pucDMABuffer );
                    }
                    else
                    {
                        sd_result = SD_INVALID_PARAMETER;
                    }
                }
            }
        #endif /* SDIO_USES_DMA */

        if( sd_result == SD_OK )
        {
            /* No errors. */
            lReturnCode = 0L;
        }
        else
        {
            FF_PRINTF( "prvFFWrite: %lu: %u (%s)\n", ulSectorNumber, sd_result, prvSDCodePrintable( sd_result ) );
        }
    }
    else
    {
        if( pxDisk->xStatus.bIsInitialised != pdFALSE )
        {
            FF_PRINTF( "prvFFWrite: warning: %lu + %lu > %lu\n", ulSectorNumber, ulSectorCount, pxDisk->ulNumberOfSectors );
        }
    }

    return lReturnCode;
}

BaseType_t FF_SDDiskDetect( FF_Disk_t * pxDisk )
{
    int xReturn;

    xReturn = prvSDDetect();

    if( xReturn != pdFALSE )
    {
        if( xCardDetect.bStableSignal == pdFALSE )
        {
            /* The card seems to be present. */
            if( xCardDetect.bLastPresent == pdFALSE )
            {
                xCardDetect.bLastPresent = pdTRUE;
                xCardDetect.xRemainingTime = pdMS_TO_TICKS( ( TickType_t ) sdCARD_DETECT_DEBOUNCE_TIME_MS );
                /* Fetch the current time. */
                vTaskSetTimeOutState( &xCardDetect.xTimeOut );
            }

            /* Has the timeout been reached? */
            if( xTaskCheckForTimeOut( &xCardDetect.xTimeOut, &xCardDetect.xRemainingTime ) != pdFALSE )
            {
                xCardDetect.bStableSignal = pdTRUE;
            }
            else
            {
                /* keep returning false until de time-out is reached. */
                xReturn = pdFALSE;
            }
        }
    }
    else
    {
        xCardDetect.bLastPresent = pdFALSE;
        xCardDetect.bStableSignal = pdFALSE;
    }

    return xReturn;
}

static BaseType_t prvSDDetect( void )
{
    int iReturn;

    /*!< Check GPIO to detect SD */
    if( HAL_GPIO_ReadPin( configSD_DETECT_GPIO_PORT, configSD_DETECT_PIN ) != 0 )
    {
        /* The internal pull-up makes the signal high. */
        iReturn = pdFALSE;
    }
    else
    {
        /* The card will pull the GPIO signal down. */
        iReturn = pdTRUE;
    }

    return iReturn;
}
