==> FreeRTOS/Lab-Project-FreeRTOS-FAT/portable/ATSAM4E/ff_sddisk.c <==
#include <stdlib.h>
#include <string.h>
#include <stdarg.h>
#include <stdio.h>
#include "FreeRTOS.h"
#include "task.h"
#include "semphr.h"
#include "portmacro.h"
#include "ff_sddisk.h"
#include "ff_sys.h"
#include <board.h>
#include <sd_mmc.h>
#include "hr_gettime.h"
#define sdSIGNATURE         0x41404342UL
#define sdHUNDRED_64_BIT    ( 100ull )
#define sdBYTES_PER_MB      ( 1024ull * 1024ull )
#define sdSECTORS_PER_MB    ( sdBYTES_PER_MB / 512ull )
#define sdIOMAN_MEM_SIZE    4096
#define xSDCardInfo         ( sd_mmc_cards[ 0 ] )
#define sdAligned( pvAddress )    ( ( ( ( size_t ) ( pvAddress ) ) & ( sizeof( size_t ) - 1 ) ) == 0 )
        #define sdMAX_TRANSFER_TIME    4000
    #define sdHSMCI_INTERRUPT_FLAGS \
    HSMCI_IER_NOTBUSY |             \
    HSMCI_IER_UNRE |                \
    HSMCI_IER_OVRE |                \
    HSMCI_IER_DTOE |                \
    HSMCI_IER_DCRCE |               \
    HSMCI_IER_TXBUFE |              \
    HSMCI_IER_RXBUFF |              \
    HSMCI_IER_XFRDONE
    #define sdMSMCI_USE_SEMAPHORE    1
#define ARRAY_SIZE( x )    ( int ) ( sizeof( x ) / sizeof( x )[ 0 ] )

static int32_t prvFFRead( uint8_t * pucBuffer,
                          uint32_t ulSectorNumber,
                          uint32_t ulSectorCount,
                          FF_Disk_t * pxDisk )
{
    int32_t lReturnCode = FF_ERR_IOMAN_OUT_OF_BOUNDS_READ | FF_ERRFLAG, lResult = pdFALSE;

    if( ( pxDisk != NULL ) &&
        ( xSDCardStatus == pdPASS ) &&
        ( pxDisk->ulSignature == sdSIGNATURE ) &&
        ( pxDisk->xStatus.bIsInitialised != pdFALSE ) &&
        ( ulSectorNumber < pxDisk->ulNumberOfSectors ) &&
        ( ( pxDisk->ulNumberOfSectors - ulSectorNumber ) >= ulSectorCount ) )
    {
        /* As the MCI driver is configured to use DMA, it must be tested that
         * the buffer is located in internal SRAM ("IRAM") and if it is 4-byte aligned. */
        if( sdAligned( pucBuffer ) && prvIsInternalRAM( pucBuffer ) )
        {
            lResult = sd_physical_read( ulSectorNumber, pucBuffer, ulSectorCount );
        }
        else
        {
            uint32_t ulSector;
            uint8_t * pucDMABuffer = ffconfigMALLOC( 512ul );

            /* The buffer is NOT word-aligned, read to an aligned buffer and then
             * copy the data to the user provided buffer. */
            if( pucDMABuffer != NULL )
            {
                for( ulSector = 0; ulSector < ulSectorCount; ulSector++ )
                {
                    lResult = sd_physical_read( ulSectorNumber + ulSector, pucDMABuffer, 1 );

                    if( lResult == pdFALSE )
                    {
                        break;
                    }

                    /* Copy to the user-provided buffer. */
                    memcpy( pucBuffer + 512ul * ulSector, pucDMABuffer, 512ul );
                }

                ffconfigFREE( pucDMABuffer );
            }
            else
            {
                FF_PRINTF( "prvFFRead: malloc failed\n" );
                lResult = pdFALSE;
            }
        }

        if( lResult != pdFALSE )
        {
            lReturnCode = 0L;
        }
        else
        {
            /* Some error occurred. */
            FF_PRINTF( "prvFFRead: %lu: %ld\n", ulSectorNumber, lResult );
        }
    }
    else
    {
        /* Make sure no random data is in the returned buffer. */
        memset( ( void * ) pucBuffer, '\0', ulSectorCount * 512UL );

        if( pxDisk->xStatus.bIsInitialised != pdFALSE )
        {
            FF_PRINTF( "prvFFRead: warning: %lu + %lu > %lu\n", ulSectorNumber, ulSectorCount, pxDisk->ulNumberOfSectors );
        }
    }

    return lReturnCode;
}

static int32_t prvFFWrite( uint8_t * pucBuffer,
                           uint32_t ulSectorNumber,
                           uint32_t ulSectorCount,
                           FF_Disk_t * pxDisk )
{
    int32_t lReturnCode = FF_ERR_IOMAN_OUT_OF_BOUNDS_READ | FF_ERRFLAG, lResult = pdFALSE;

    if( ( pxDisk != NULL ) &&
        ( xSDCardStatus == pdPASS ) &&
        ( pxDisk->ulSignature == sdSIGNATURE ) &&
        ( pxDisk->xStatus.bIsInitialised != pdFALSE ) &&
        ( ulSectorNumber < pxDisk->ulNumberOfSectors ) &&
        ( ( pxDisk->ulNumberOfSectors - ulSectorNumber ) >= ulSectorCount ) )
    {
        /* As the MCI driver is configured to use DMA, it must be tested that
         * the buffer is located in internal SRAM ("IRAM") and if it is 4-byte aligned. */
        if( sdAligned( pucBuffer ) && prvIsInternalRAM( pucBuffer ) )
        {
            lResult = sd_physical_write( ulSectorNumber, pucBuffer, ulSectorCount );
        }
        else
        {
            uint32_t ulSector;
            uint8_t * pucDMABuffer = ffconfigMALLOC( 512ul );

            /* The buffer is NOT word-aligned, read to an aligned buffer and then
             * copy the data to the user provided buffer. */
            if( pucDMABuffer != NULL )
            {
                for( ulSector = 0; ulSector < ulSectorCount; ulSector++ )
                {
                    /* Copy from the user provided buffer to the temporary buffer. */
                    memcpy( pucDMABuffer, pucBuffer + 512ul * ulSector, 512ul );
                    lResult = sd_physical_write( ulSectorNumber + ulSector, pucDMABuffer, 1 );

                    if( lResult == pdFALSE )
                    {
                        break;
                    }
                }

                ffconfigFREE( pucDMABuffer );
            }
            else
            {
                FF_PRINTF( "prvFFWrite: malloc failed\n" );
                lResult = pdFALSE;
            }
        }

        if( lResult != pdFALSE )
        {
            /* No errors. */
            lReturnCode = 0L;
        }
        else
        {
            FF_PRINTF( "prvFFWrite: %lu: %ld\n", ulSectorNumber, lResult );
        }
    }
    else
    {
        if( pxDisk->xStatus.bIsInitialised != pdFALSE )
        {
            FF_PRINTF( "prvFFWrite: warning: %lu + %lu > %lu\n", ulSectorNumber, ulSectorCount, pxDisk->ulNumberOfSectors );
        }
    }

    return lReturnCode;
}

BaseType_t FF_SDDiskDetect( FF_Disk_t * pxDisk )
{
    BaseType_t xIsPresent;
    void * pvSemaphore;

    if( ( pxDisk != NULL ) && ( pxDisk->pxIOManager ) )
    {
        pvSemaphore = pxDisk->pxIOManager->pvSemaphore;
    }
    else
    {
        pvSemaphore = NULL;
    }

    /*_RB_ Can these NULL checks be moved inside the FF_nnnSemaphore() functions? */
    /*_HT_ I'm afraid not, both functions start with configASSERT( pxSemaphore ); */
    if( pvSemaphore != NULL )
    {
        FF_PendSemaphore( pvSemaphore );
    }

    xIsPresent = prvSDDetect();

    if( pvSemaphore != NULL )
    {
        FF_ReleaseSemaphore( pvSemaphore );
    }

    return xIsPresent;
}

static BaseType_t prvSDDetect( void )
{
    static BaseType_t xWasPresent;
    BaseType_t xIsPresent;
    sd_mmc_err_t xSDPresence;

    if( xWasPresent == pdFALSE )
    {
        /* Try to initialize SD MMC stack */
        sd_mmc_init();
        xSDPresence = sd_mmc_check( 0 );

        if( ( xSDPresence == SD_MMC_OK ) || ( xSDPresence == SD_MMC_INIT_ONGOING ) )
        {
            xIsPresent = pdTRUE;
        }
        else
        {
            xIsPresent = pdFALSE;
        }
    }
    else
    {
        /* See if the card is still present. */
        xSDPresence = sd_mmc_check_status( 0 );

        if( xSDPresence == SD_MMC_OK )
        {
            xIsPresent = pdTRUE;
        }
        else
        {
            xIsPresent = pdFALSE;
        }
    }

    xWasPresent = xIsPresent;

    return xIsPresent;
}
